# gitlab-mcp-tools

./: .gitignore  pyproject.toml
src/gitlab_mcp_tools/: gitlab.py  server.py
